Add enableNativeAccess property